--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="user-scalable=false, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 	<title>The Applecart Project | Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="media.css">
@@ -14,7 +15,7 @@
 	<div class="content-wrapper">
 
 <!-- SITE BANNER -->
-	<div class="portfolio-banner">
+	<div class="portfolio-banner banner">
 
 		<div class="site-nav">
 			<a href="index.html" class="other-tab">Home</a>
