--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="user-scalable=false, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
-	<title>The Applecart Project | Portfolio</title>
+	<title>Portfolio | The Applecart Project</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="media.css">
 	<link href='http://fonts.googleapis.com/css?family=Muli|Crimson+Text: 400,700' rel='stylesheet' type='text/css'>
