--- a/portfolio.html
+++ b/portfolio.html
@@ -61,6 +61,18 @@
 <!-- FOOTER -->
 <footer>Find me on Twitter at <a href="http://twitter.com/alisen_hazzard" target="blank">@alisen_hazzard</a> or send an <a href="mailto:hello.applecart@gmail.com">email</a>.</footer>
 
-</body>
 
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-52117051-1', 'theapplecartproject.com');
+  ga('send', 'pageview');
+
+</script>
+
+</body>
 </html>
