adds new blog post, changes body color, adjusts media queries

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
 	<title>Portfolio | The Applecart Project</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="media.css">
-	<link href='http://fonts.googleapis.com/css?family=Muli|Crimson+Text: 400,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Raleway|Crimson+Text: 400,700' rel='stylesheet' type='text/css'>
 
 </head>
 
@@ -54,6 +54,7 @@
 	<div class="new-post">
 		<h2>Coming Soon</h2>
 		<h3>Saint Francis of Assisi</h3>
+		<h3>Vasir</h3>
 	</div>
 
 </div>
